--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,7 +11,9 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CCTags.CCAbilities.Death",DevComment="")
++GameplayTagList=(Tag="CCTags.CCAbilities.Enemy.Attack",DevComment="")
 +GameplayTagList=(Tag="CCTags.CCAbilities.Enemy.HitReact",DevComment="Tag for the Enemy Hit React Ability")
++GameplayTagList=(Tag="CCTags.Events.Enemy.EndAttack",DevComment="")
 +GameplayTagList=(Tag="CCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay bility")
 +GameplayTagList=(Tag="CCTags.Status.Dead",DevComment="")
 
