--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,5 +13,6 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CCTags.CCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="CCTags.CCAbilities.Enemy.HitReact",DevComment="Tag for the Enemy Hit React Ability")
 +GameplayTagList=(Tag="CCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay bility")
++GameplayTagList=(Tag="CCTags.SetByCaller.Melee",DevComment="")
 +GameplayTagList=(Tag="CCTags.Status.Dead",DevComment="")
 
