--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,9 +10,12 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="CCTags.CCAbilities.BlockHitReact",DevComment="Tag for Blocking Hit React")
 +GameplayTagList=(Tag="CCTags.CCAbilities.Death",DevComment="")
 +GameplayTagList=(Tag="CCTags.CCAbilities.Enemy.HitReact",DevComment="Tag for the Enemy Hit React Ability")
 +GameplayTagList=(Tag="CCTags.Events.Player.Primary",DevComment="Tag for the Primary Gameplay bility")
 +GameplayTagList=(Tag="CCTags.SetByCaller.Melee",DevComment="")
 +GameplayTagList=(Tag="CCTags.Status.Dead",DevComment="")
++GameplayTagList=(Tag="GameplayCue.BurstImpact",DevComment="")
++GameplayTagList=(Tag="GameplayCue.HitReact",DevComment="")
 
